# blender

./: CMakeLists.txt  GNUmakefile
source/: CMakeLists.txt
source/blender/: CMakeLists.txt
source/blender/blendthumb/: CMakeLists.txt
source/blender/blenfont/: BLF_api.h  CMakeLists.txt
source/blender/blenkernel/: BKE_DerivedMesh.h  BKE_action.h  BKE_addon.h  BKE_anim_data.h  BKE_anim_path.h  BKE_anim_visualization.h  BKE_animsys.h  BKE_appdir.h  BKE_armature.h  BKE_attribute.h  BKE_autoexec.h  BKE_blender.h  BKE_blender_copybuffer.h  BKE_blender_undo.h  BKE_blender_user_menu.h  BKE_blender_version.h  BKE_blendfile.h  BKE_boids.h  BKE_bpath.h  BKE_brush.h  BKE_bvhutils.h  BKE_cachefile.h  BKE_callbacks.h  BKE_camera.h  BKE_ccg.h  BKE_cdderivedmesh.h  BKE_cloth.h  BKE_collection.h  BKE_collision.h  BKE_colorband.h  BKE_colortools.h  BKE_constraint.h  BKE_context.h  BKE_crazyspace.h  BKE_curve.h  BKE_curveprofile.h  BKE_customdata.h  BKE_customdata_file.h  BKE_data_transfer.h  BKE_deform.h  (+109 more)
source/blender/blenlib/: BLI_alloca.h  BLI_allocator.hh  BLI_args.h  BLI_array.h  BLI_array.hh  BLI_array_store.h  BLI_array_store_utils.h  BLI_array_utils.h  BLI_asan.h  BLI_assert.h  BLI_astar.h  BLI_bitmap.h  BLI_bitmap_draw_2d.h  BLI_blenlib.h  BLI_boxpack_2d.h  BLI_buffer.h  BLI_color.hh  BLI_compiler_attrs.h  BLI_compiler_compat.h  BLI_compiler_typecheck.h  BLI_console.h  BLI_convexhull_2d.h  BLI_delaunay_2d.h  BLI_dial_2d.h  BLI_disjoint_set.hh  BLI_dlrbTree.h  BLI_dot_export.hh  BLI_dot_export_attribute_enums.hh  BLI_double2.hh  BLI_double3.hh  BLI_dynlib.h  BLI_dynstr.h  BLI_edgehash.h  BLI_endian_switch.h  BLI_endian_switch_inline.h  BLI_expr_pylike_eval.h  BLI_fileops.h  BLI_fileops_types.h  BLI_float2.hh  BLI_float3.hh  (+107 more)
source/blender/blenloader/: BLO_blend_defs.h  BLO_blend_validate.h  BLO_read_write.h  BLO_readfile.h  BLO_undofile.h  BLO_writefile.h  CMakeLists.txt
source/blender/blentranslation/: BLT_lang.h  BLT_translation.h  CMakeLists.txt
source/blender/bmesh/: CMakeLists.txt  bmesh.h  bmesh_class.h  bmesh_tools.h
source/blender/compositor/: CMakeLists.txt  COM_compositor.h  COM_defines.h
source/blender/datatoc/: CMakeLists.txt  datatoc.c  datatoc_icon.c  datatoc_icon.py  datatoc_icon_split.py  datatoc_icon_split_to_png.py
source/blender/depsgraph/: CMakeLists.txt  DEG_depsgraph.h  DEG_depsgraph_build.h  DEG_depsgraph_debug.h  DEG_depsgraph_physics.h  DEG_depsgraph_query.h
source/blender/draw/: CMakeLists.txt  DRW_engine.h  DRW_engine_types.h  DRW_select_buffer.h
source/blender/editors/: CMakeLists.txt
source/blender/freestyle/: CMakeLists.txt  FRS_freestyle.h
source/blender/functions/: CMakeLists.txt  FN_array_spans.hh  FN_attributes_ref.hh  FN_cpp_type.hh  FN_generic_vector_array.hh  FN_multi_function.hh  FN_multi_function_builder.hh  FN_multi_function_context.hh  FN_multi_function_data_type.hh  FN_multi_function_network.hh  FN_multi_function_network_evaluation.hh  FN_multi_function_network_optimization.hh  FN_multi_function_param_type.hh  FN_multi_function_params.hh  FN_multi_function_signature.hh  FN_spans.hh
source/blender/gpencil_modifiers/: CMakeLists.txt  MOD_gpencil_modifiertypes.h
source/blender/gpu/: CMakeLists.txt  GPU_batch.h  GPU_batch_presets.h  GPU_batch_utils.h  GPU_buffers.h  GPU_capabilities.h  GPU_common.h  GPU_context.h  GPU_debug.h  GPU_drawlist.h  GPU_framebuffer.h  GPU_glew.h  GPU_immediate.h  GPU_immediate_util.h  GPU_index_buffer.h  GPU_init_exit.h  GPU_legacy_stubs.h  GPU_material.h  GPU_matrix.h  GPU_platform.h  GPU_primitive.h  GPU_select.h  GPU_shader.h  GPU_state.h  GPU_texture.h  GPU_uniform_buffer.h  GPU_vertex_buffer.h  GPU_vertex_format.h  GPU_viewport.h
source/blender/ikplugin/: BIK_api.h  CMakeLists.txt
source/blender/imbuf/: CMakeLists.txt  IMB_colormanagement.h  IMB_imbuf.h  IMB_imbuf_types.h  IMB_metadata.h  IMB_moviecache.h  IMB_thumbs.h
source/blender/io/: CMakeLists.txt
source/blender/makesdna/: CMakeLists.txt  DNA_ID.h  DNA_action_types.h  DNA_anim_types.h  DNA_armature_types.h  DNA_boid_types.h  DNA_brush_defaults.h  DNA_brush_types.h  DNA_cachefile_defaults.h  DNA_cachefile_types.h  DNA_camera_defaults.h  DNA_camera_types.h  DNA_cloth_types.h  DNA_collection_types.h  DNA_color_types.h  DNA_constraint_types.h  DNA_curve_defaults.h  DNA_curve_types.h  DNA_curveprofile_types.h  DNA_customdata_types.h  DNA_defaults.h  DNA_defs.h  DNA_documentation.h  DNA_dynamicpaint_types.h  DNA_effect_types.h  DNA_fileglobal_types.h  DNA_fluid_types.h  DNA_freestyle_types.h  DNA_genfile.h  DNA_gpencil_modifier_types.h  (+74 more)
source/creator/: CMakeLists.txt  creator.c  creator_args.c  creator_intern.h  creator_signals.c
(+4111 files in other folders)
